Added Unit tests + Sonar scan